Add Tiled Lines

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,19 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<style>
+			body {
+				background: #fff;
+				display: flex;
+				height: 100vh;
+				margin: 0;
+				align-items: center;
+				justify-content: center;
+				position: relative;
+				min-height: 560px;
+				--blur: 2px;
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body>
